--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -16,6 +16,11 @@
   border-radius:5px;
 }
 
+.bookings-grid img{
+  object-fit: cover;
+  border-radius:5px;
+}
+
 .card-pet-info{
   width:100%;
   padding-left:10px;
