--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -33,13 +33,12 @@
           </div>
           <% if Integer(Date.today - booking.end_date) < 0%>
             <div class="d-flex align-items-center justify-content-between">
-              <button class="btn btn-secondary">
-                You can't review yet !
-              </button>
+              <p class="btn btn-secondary mb-0">You can't review yet !</p>
               <% if Integer(Date.today - booking.start_date) < 0 %>
                 <p class="cancel align-self-center m-0 bd-highligh">
                   <% if policy(booking).destroy? %>
-                    <%= link_to "Cancel Booking", booking_path(booking), method: "delete", data: {confirm: "Are you sure ?"} %>
+                    <button id="sweet-alert-demo" class="btn btn-danger">Cancel booking</button>
+                    <%= link_to "", booking_path(booking), method: :delete, id: "delete-link" %>
                   <% end %>
                 </p>
               <% end %>
@@ -49,9 +48,7 @@
               Add a review
             </button>
           <% else %>
-            <button class="see-review btn btn-outline-secondary">
-              <%= link_to "See my review", pet_path(booking.pet) %>
-            </button>
+            <%= link_to "See my review", pet_path(booking.pet), class:"btn btn-outline-secondary" %>
           <% end %>
         </div>
         <div class="d-none mt-3 align-items-center">
