--- a/app/views/shared/_flatpickr_form.html.erb
+++ b/app/views/shared/_flatpickr_form.html.erb
@@ -7,6 +7,7 @@
     <%= simple_form_for [@pet, @booking] do |f| %>
       <%= f.input :start_date, label: "Choose a date:", as: :string, required: false, input_html: { id: "range_start", class: "d-none"} %>
       <%= f.input :end_date, label: false, as: :string, required: false, input_html: { id: "range_end", class: "d-none" } %>
+      <div class="data-total-price"></div>
       <%= f.button :submit, "Book", class: "btn btn-secondary w-100" %>
     <% end %>
   </div>
